<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".InitActivity">


    <!-- Title text -->
    <TextView
        android:id="@+id/initTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initTitleText"
        android:textSize="27sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2"
        />

    <!-- Sub Title text -->
    <TextView
        android:id="@+id/initSubTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initSubTitleText"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/initTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Logo -->
    <ImageView
        android:id="@+id/initLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/init_logo"

        app:layout_constraintTop_toBottomOf="@id/initSubTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="50dp"
        />

    <android.widget.Button
        android:id="@+id/initButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext_background_stroke"

        app:layout_constraintTop_toBottomOf="@id/initLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6"
        android:layout_marginTop="20dp"

        android:text="@string/initButtonText"
        android:textStyle="bold"
        android:textSize="17sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>