<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <!--로고-->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--세통 text-->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTitleText"
        android:textSize="35sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!--로그인 text-->
    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginText"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="10dp"
        />

    <!--아이디 text-->
    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idText"
        android:textStyle="bold"
        android:layout_marginStart="5dp"

        app:layout_constraintBottom_toTopOf="@id/usernameEditText"
        app:layout_constraintStart_toStartOf="@id/usernameEditText"

        />

    <!--아이디 입력란-->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edittext_background"

        android:singleLine="true"

        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginText"

        android:paddingStart="16dp"
        android:paddingEnd="16dp"

        android:layout_marginTop="50dp"
        />


    <!--비밀번호 text-->
    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordText"
        android:textStyle="bold"
        android:layout_marginStart="5dp"

        app:layout_constraintBottom_toTopOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="@id/passwordEditText"
        />


    <!--비밀번호 입력란-->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edittext_background"

        android:singleLine="true"

        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"

        android:paddingStart="16dp"
        android:paddingEnd="16dp"

        android:layout_marginTop="30dp"

        />

    <!--로그인 버튼-->
    <android.widget.Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loginText"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintWidth_percent="0.7"
        android:background="@drawable/rounded_edittext_background"

        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="50dp"

        />




</androidx.constraintlayout.widget.ConstraintLayout>