<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".QuestionPostFragment">

    <!-- 질문 작성 text -->
    <TextView
        android:id="@+id/writeQuestionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/writeQuestionText"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        />

    <!-- 제목 editText -->
    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:hint="@string/titleText"
        android:singleLine="true"

        android:background="@drawable/rounded_edittext"

        app:layout_constraintTop_toBottomOf="@id/writeQuestionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"

        android:layout_marginTop="50dp"
        android:paddingStart="15sp"
        android:paddingEnd="15sp"
        />

    <!-- 내용 editText -->
    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="30dp"

        android:background="@drawable/rounded_edittext2"
        android:hint="@string/contentText"

        android:paddingStart="15sp"
        android:paddingEnd="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleEditText"
        app:layout_constraintWidth_percent="0.9" />

    <!-- 등록하기 button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="사진"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentEditText" />

    <ImageButton
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/post_button"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentEditText"
        app:layout_constraintWidth_percent="0.4"

        />

</androidx.constraintlayout.widget.ConstraintLayout>