<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyHistory">

    <!-- 뒤로가기 버튼 -->
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:background="@android:color/transparent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        />

    <!-- 더보기 버튼 -->
    <ImageButton
        android:id="@+id/more_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/more_button"
        android:background="@android:color/transparent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="40dp"
        />

    <!-- 제목 텍스트 -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myHistoryTitleText"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@id/top_view"
        app:layout_constraintEnd_toEndOf="@id/top_view"
        app:layout_constraintTop_toTopOf="@id/top_view"
        app:layout_constraintBottom_toBottomOf="@id/top_view"
        app:layout_constraintVertical_bias="0.4"
        />

    <!-- 부제목 텍스트 -->
    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myHistorySubTitleText"
        android:textSize="12sp"

        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        />



    <!-- top ImageView -->
    <ImageView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/gradient_background"
        app:layout_constraintHeight_percent="0.25"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <!-- main ImageView -->
    <ImageView
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/rounded_edittext_radius20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.8"
        />

    <!-- question container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/question_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/main_view"
        app:layout_constraintStart_toStartOf="@id/main_view"
        app:layout_constraintEnd_toEndOf="@id/main_view"
        >

        <!-- 질문자 프로필 -->
        <ImageView
            android:id="@+id/questioner_profile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/profile_small"
            android:background="@android:color/transparent"

            app:layout_constraintTop_toTopOf="@id/question_container"
            app:layout_constraintStart_toStartOf="@id/question_container"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            />

        <!-- 질문자 닉네임 -->
        <TextView
            android:id="@+id/questioner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionerName"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="@id/questioner_profile"
            app:layout_constraintBottom_toBottomOf="@id/questioner_profile"
            app:layout_constraintStart_toEndOf="@id/questioner_profile"

            android:layout_marginStart="5dp"
            />

        <!-- 질문 내용 -->
        <TextView
            android:id="@+id/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionText"
            android:textSize="12sp"

            app:layout_constraintTop_toBottomOf="@id/questioner_profile"
            app:layout_constraintStart_toStartOf="@id/questioner_profile"
            android:layout_marginTop="10dp"
            />

        <!-- 질문 사진 -->
        <ImageView
            android:id="@+id/question_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/rounded_edittext_background"

            app:layout_constraintTop_toBottomOf="@id/question_text"
            app:layout_constraintStart_toStartOf="@id/question_container"
            app:layout_constraintEnd_toEndOf="@id/question_container"

            android:layout_marginTop="25dp"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.7"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- response container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/response_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/question_container"
        app:layout_constraintStart_toStartOf="@id/main_view"
        app:layout_constraintEnd_toEndOf="@id/main_view"
        >

        <!-- 답변자 프로필 -->
        <ImageView
            android:id="@+id/response_profile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/profile_small"
            android:background="@android:color/transparent"

            app:layout_constraintTop_toTopOf="@id/response_container"
            app:layout_constraintStart_toStartOf="@id/response_container"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            />

        <!-- 답변자 닉네임 -->
        <TextView
            android:id="@+id/response_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/responseName"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="@id/response_profile"
            app:layout_constraintBottom_toBottomOf="@id/response_profile"
            app:layout_constraintStart_toEndOf="@id/response_profile"

            android:layout_marginStart="5dp"
            />

        <!-- 질문 내용 -->
        <TextView
            android:id="@+id/response_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/responseText"
            android:textSize="12sp"

            app:layout_constraintTop_toBottomOf="@id/response_profile"
            app:layout_constraintStart_toStartOf="@id/response_profile"
            android:layout_marginTop="10dp"
            />

        <!-- 질문 사진 -->
        <ImageView
            android:id="@+id/response_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/rounded_edittext_background"

            app:layout_constraintTop_toBottomOf="@id/response_text"
            app:layout_constraintStart_toStartOf="@id/response_container"
            app:layout_constraintEnd_toEndOf="@id/response_container"

            android:layout_marginTop="25dp"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.7"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>