<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyHistory">

    <!-- 뒤로가기 버튼 -->
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:background="@android:color/transparent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        />

    <!-- text -->
    <TextView
        android:id="@+id/joinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joinTitle"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@id/top_view"
        app:layout_constraintEnd_toEndOf="@id/top_view"
        app:layout_constraintTop_toTopOf="@id/top_view"
        app:layout_constraintBottom_toBottomOf="@id/top_view"
        />


    <!-- top ImageView -->
    <ImageView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/gradient_background"
        app:layout_constraintHeight_percent="0.25"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <!-- main ImageView -->
    <ImageView
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/rounded_edittext_radius20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.8"
        />

    <!-- question container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/question_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/main_view"
        app:layout_constraintStart_toStartOf="@id/main_view"
        app:layout_constraintEnd_toEndOf="@id/main_view"
        >


        <!-- 유저 프로필 -->
        <ImageView
            android:id="@+id/joinProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/join_profile"
            app:layout_constraintTop_toTopOf="@id/question_container"
            app:layout_constraintStart_toStartOf="@id/question_container"
            app:layout_constraintEnd_toEndOf="@id/question_container"
            android:layout_marginTop="20dp"
            />

        <!-- 닉네임 Text -->
        <TextView
            android:id="@+id/joinNickNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joinNickname"
            android:textSize="15sp"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="@id/joinNickNameEditText"
            app:layout_constraintBottom_toTopOf="@id/joinNickNameEditText"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="3dp"
            />


        <!-- 닉네임 EditText -->
        <EditText
            android:id="@+id/joinNickNameEditText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext_background_stroke"

            android:singleLine="true"

            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintStart_toStartOf="@id/question_container"
            app:layout_constraintEnd_toEndOf="@id/question_container"
            app:layout_constraintTop_toBottomOf="@id/joinProfile"

            android:paddingStart="16dp"
            android:paddingEnd="16dp"

            android:layout_marginTop="50dp"
            />


        <!-- 아이디 Text -->
        <TextView
            android:id="@+id/joinIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joinId"
            android:textSize="15sp"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="@id/joinIdEditText"
            app:layout_constraintBottom_toTopOf="@id/joinIdEditText"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="3dp"
            />


        <!-- 아이디 EditText -->
        <EditText
            android:id="@+id/joinIdEditText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext_background_stroke"

            android:singleLine="true"

            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintStart_toStartOf="@id/question_container"
            app:layout_constraintEnd_toEndOf="@id/question_container"
            app:layout_constraintTop_toBottomOf="@id/joinNickNameEditText"

            android:paddingStart="16dp"
            android:paddingEnd="16dp"

            android:layout_marginTop="50dp"
            />


        <!-- 비밀번호 Text -->
        <TextView
            android:id="@+id/joinPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joinPassword"
            android:textSize="15sp"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="@id/joinPasswordEditText"
            app:layout_constraintBottom_toTopOf="@id/joinPasswordEditText"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="3dp"
            />


        <!-- 비밀번호 EditText -->
        <EditText
            android:id="@+id/joinPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext_background_stroke"

            android:singleLine="true"

            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintStart_toStartOf="@id/question_container"
            app:layout_constraintEnd_toEndOf="@id/question_container"
            app:layout_constraintTop_toBottomOf="@id/joinIdEditText"

            android:paddingStart="16dp"
            android:paddingEnd="16dp"

            android:layout_marginTop="50dp"
            />


        <!-- 이름 Text -->
        <TextView
            android:id="@+id/joinNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joinName"
            android:textSize="15sp"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="@id/joinNameEditText"
            app:layout_constraintBottom_toTopOf="@id/joinNameEditText"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="3dp"
            />


        <!-- 이름 EditText -->
        <EditText
            android:id="@+id/joinNameEditText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext_background_stroke"

            android:singleLine="true"

            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintStart_toStartOf="@id/question_container"
            app:layout_constraintEnd_toEndOf="@id/question_container"
            app:layout_constraintTop_toBottomOf="@id/joinPasswordEditText"

            android:paddingStart="16dp"
            android:paddingEnd="16dp"

            android:layout_marginTop="50dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- response container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/response_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/question_container"
        app:layout_constraintStart_toStartOf="@id/main_view"
        app:layout_constraintEnd_toEndOf="@id/main_view"
        >





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>